src/test/ui/parser/attr-bad-meta-2.stderr
error: unexpected token: `]`
  --> $DIR/attr-bad-meta-2.rs:1:8
   |
LL | #[path =]
   |        ^

error: aborting due to previous error

